# pro_barberov

./: .env.template  .gitignore  Dockerfile  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2dd476f5a3e2_init_tables.py
app/: main.py
app/api/: deps.py  routers.py
app/api/endpoints/: roles.py  users.py
app/db/: connection.py  models.py
app/repositories/: exceptions.py  general.py  roles.py
app/schemas/: roles.py
app/services/: exceptions.py  roles.py
app/settings/: settings.py
app/tests/fixtures/: db.py  roles.py
app/tests/test_repositories/: test_roles.py
